k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjsbasicapp
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjsbasicapp
  template:
    metadata:
      labels:
        app: nextjsbasicapp
    spec:
      containers:
        - name: nextjsbasicapp
          image: nvonron/nextjsbasicapp:latest
          ports:
            - containerPort: 3000
