k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjsbasicapp-service
spec:
  selector:
    app: nextjsbasicapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
